--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     <title>Flask Boilerplate</title>
 </head>
 <body>
-    <div id="main-container">Hello</div>
-    <script src="{{ url_for('static', filename='js/index.js') }}"></script>
+    <div id="root">Hello</div>
+    <script src="{{ url_for('static', filename='js/dist/bundle.js') }}?210"></script>
 </body>
 </html>
