moved all frontend related files to frontend folder

--- a/app/frontend/templates/index.html
+++ b/app/frontend/templates/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <div id="root">Hello</div>
-    <script src="{{ url_for('static', filename='js/dist/bundle.js') }}?210"></script>
+    <script src="{{ url_for('static', filename='js/dist/bundle.js') }}"></script>
 </body>
 </html>
